src/skins/default/en/css/lc.css
/* ... */
.checkout-block .review-step .list li a .fade {
  background: transparent url(../images/right_fade.png) repeat-y right top;
  display: block;
  position: absolute;
  right: 0px;
  top: 0px;
  width: 20px;
  height: 100%;
}

.checkout-block .review-step .list li div,
.checkout-block .review-step .modifiers li,
.checkout-block .review-step .total
{
  color: #333;
}

.checkout-block .review-step .modifiers {
  padding-left: 11px;
  padding-top: 10px;
}

.checkout-block .review-step.current .modifiers {
  padding-left: 10px;
  padding-top: 8px;
  padding-right: 1px;
}

.checkout-block .review-step .modifiers li {
  padding: 3px 7px 3px 0px;
}

.checkout-block .review-step.current .modifiers li {
  padding-bottom: 4px; 
}

.checkout-block .review-step .items-row span,
.checkout-block .review-step .list li div,
.checkout-block .review-step .modifiers span,
.checkout-block .review-step .total span
{
  float: right;
}

.checkout-block .review-step hr {
  border-color: #d4d4d4;
  margin: 13px 0px 11px 0px;
}

.checkout-block .review-step.current hr {
  margin-top: 2px;
  margin-bottom: 8px;
}

.checkout-block .review-step .total {
  padding-left: 11px;
  font-size: 18px;
}

.checkout-block .review-step.current .total {
  font-size: 22px;
  padding-left: 10px;
  padding-right: 10px;
}

.checkout-block .review-step .total span {
  color: #ff6c00;
}

.checkout-block .review-step p.note,
.checkout-block .review-step p.agree-note
{
  padding-top: 13px;
  padding-bottom: 8px;
  font-size: 12px;
  text-align: center;
  color: #1a6992;
}

.checkout-block form.place {
  padding: 19px 26px;
}

.checkout-block form.place .notes label {
  display: block;
  padding-bottom: 6px;
}

.checkout-block form.place .notes textarea {
  width: 360px;
  height: 72px;
  border-width: 1px;
}

.checkout-block form.place .terms {
  padding-top: 10px;
  text-align: center;
  vertical-align: middle;
  position: relative;
}

.checkout-block form.place .terms .terms-box {
  padding: 11px;
  margin: auto;
  text-align: center;
  width: 60%;
  white-space: nowrap;
}

.checkout-block form.place .non-agree .terms-box {
  background: #eff8fe none;
  border: 1px solid #cadce8;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  padding: 10px;
}

.checkout-block form.place .terms div.mark {
  background: transparent none no-repeat center bottom;
  width: 17px;
  height: 9px;
  margin: auto;
  margin-top: -1px;
}

.checkout-block form.place .non-agree  div.mark {
  background-image: url(../images/bottom_triangle.png);
}

.checkout-block form.place .terms .terms-box * {
  vertical-align: middle;
  font-size: 14px;
}

.checkout-block form.place .terms input {
  margin-top: 2px;
  margin-bottom: 0px;
}

.checkout-block form.place .button-row {
  padding-top: 7px;
}

/**
 * Address book : Select address
 */
.select-address {
}

.select-address ul.addresses {
  margin: 0px;
  padding: 0px;
  padding-top: 5px;
}

.select-address ul.addresses li {
  list-style: none;
  width: 278px;
  float: left;
  background: #eff8fe none;
  border: 1px solid #cadce8;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  border-radius: 10px;
  padding: 13px 10px 12px;
  margin: 0px;
  margin-right: 30px;
  margin-bottom: 20px;
  position: relative;
}

.select-address ul.addresses li.last {
  margin-right: 0px;
}

.select-address ul.addresses li .shipping {
  position: absolute;
  right: 8px;
  top: 15px;
  background: transparent url(../images/icon_shipping.png) no-repeat left top;
  width: 42px;
  height: 20px;
}

.select-address ul.addresses li .billing {
  position: absolute;
  right: 9px;
  top: 47px;
  background: transparent url(../images/icon_billing.png) no-repeat left top;
  width: 38px;
  height: 22px;
}

.select-address .goto {
  clear: both;
  font-size : 18px;
  padding-top: 5px;
  padding-left: 5px;
}

.BlockMsg-address-book {
  width: 741px;
}

.BlockMsg-address-book .block-subcontainer {
  padding: 27px 30px 23px;
}

.BlockMsg-address-book h2.ajax-title-loadable {
  padding-left: 4px;  
  font-size: 30px;
}

/**
 * Breadcrumbs 
 */

ul.location-subnodes {
  padding: 10px;
  padding-top: 5px;
  border: 1px solid silver;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  box-shadow: 1px 1px 5px silver;
  -webkit-box-shadow: 1px 1px 5px silver;
  -moz-box-shadow: 1px 1px 5px silver;
}

ul.location-subnodes li {
  padding: 3px;
}

/**
 * Order page
 */
.order-box .order-statuses {
  float: right;
  font-size: 22px;
}

.order-status-P,
.order-status-C
{
  color: #2a8d0c;
}

.order-box .links {
  margin-top: -1px;
  margin-bottom: 19px;
}

.order-box .links {
  padding-right: 24px;
  clear: none;
}

.order-box .links a {
  text-decoration: none;
}

.order-box .links a span {
  text-decoration: underline;
}

.order-box .links .back a strong {
  font-size: 18px;
  padding-right: 7px;
}

.order-box .links .print a {
  background: transparent url(../images/icon_printer.png) no-repeat left 3px;
  padding-left: 27px;
  padding-bottom: 4px;
}

.order-box .links .track a {
  background: transparent url(../images/icon_shipping.png) no-repeat left top;
  padding: 2px 0px;
  padding-left: 41px;
}

/**
 * Invoice
 */
.invoice-box {
}

.invoice-box .header,
.invoice-box .header td
{
  border: 1px none;
  vertical-align: top;
}

.invoice-box .header .address {
  font-size: 15px;
  padding-left: 0px;
  padding-top: 29px;
  color: #333;
  width: 464px;
}

.invoice-box .header .address strong {
  font-size : 20px;
  font-weight: normal;
}

.invoice-box .header .address p {
  line-height: 18px;
  padding-top: 9px;
  padding-left: 2px;
  margin-bottom: 0px;
}

.invoice-box .header .address p.url {
  padding-top: 6px;
}

.invoice-box .header .address a {
  font-weight: normal;
}

.invoice-box .header img.logo {
  width: 160px;
  height: 100px;
  margin-top: 22px;
}

.invoice-box h2 {
  font-size: 40px;
  margin-top: 11px;
  padding-left: 3px;
}
/* ... */

